# hercules

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  cited_papers.md  index.html  pyhercules.py  pyproject.toml  test.qubo
.github/workflows/: docker.yml  rust.yml
bench/: bench.rs
benches/: common.rs  helpers.rs  microbench.rs  preprocess.rs  solver.rs
dev/bench/: data.js
src/: branch_node.rs  branch_stratagy.rs  branch_subproblem.rs  branchbound.rs  branchbound_utils.rs  branchboundlogger.rs  constraint.rs  early_termination.rs  graph_utils.rs  heuristic_stratagy.rs  initial_points.rs  kopt.rs  lib.rs  local_search.rs  local_search_utils.rs  lower_bound.rs  numeric_trait.rs  persistence.rs  preprocess.rs  python_interopt.rs  qubo.rs  qubo_heuristics.rs  solver_options.rs  subproblemsolvers.rs  utils.rs  variable_reduction.rs
src/subproblemsolvers/: clarabel_lp.rs  clarabel_qp.rs  enumerate_qubo.rs  hercules_cd_qp.rs  hercules_pgd_qp.rs  roofdual.rs
test_data/: bqp50.qubo  gka1b.qubo  gka2b.qubo  gka6a.qubo  gka7a.qubo  mk487a.qubo  test.qubo  test_large.qubo
