[package]
name = "hercules"
version = "0.2.0"
edition = "2021"
authors = ["Dustin Kenefake"]
license = "BSD-3-Clause"
description = "A Heuristics toolbox for QUBO in Rust"
repository = "https://github.com/DKenefake/hercules/"
readme = "README.md"
homepage = "https://github.com/DKenefake/hercules/"
keywords = ["QUBO", "Heuristics", "Optimization"]
categories = ["science", "mathematics"]

[lib]
name = "hercules"
crate-type = ["cdylib"]

[dependencies]
sprs = "0.11.1"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
smolprng = {version = "0.1.6", features = ["no_std"]}
rayon = "1.8.0"
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py37"] }
clarabel = "0.7.1"

[doc]
rustdocflags = [ "--html-in-header", "docs-header.html" ]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs-header.html" ]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
codegen-units = 128
opt-level = 0
lto = false
incremental = true

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
