[package]
name = "hercules"
version = "0.5.0"
edition = "2021"
authors = ["Dustin Kenefake"]
license = "BSD-3-Clause"
description = "A Heuristics toolbox for QUBO in Rust"
repository = "https://github.com/DKenefake/hercules/"
readme = "README.md"
homepage = "https://github.com/DKenefake/hercules/"
keywords = ["QUBO", "Heuristics", "Optimization"]
categories = ["science", "mathematics"]

[lib]
name = "hercules"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]
sdp = ["dep:mixingcut"]

[dependencies]
sprs = "=0.11.3"
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17.0", features = ["intel-mkl-static"] }
smolprng = {version = "0.1.6", features = ["std"]}
rayon = "1.10.0"
pyo3 = { version = "0.25.0", optional = true, features = ["extension-module", "abi3-py37"] }
clarabel = "0.10.0"
mixingcut = { version = "0.1.2", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "microbench"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs-header.html" ]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
codegen-units = 128
opt-level = 1
lto = true
incremental = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false
