[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hercules"
dynamic = ["version"]
description = "Python bindings for the Hercules QUBO toolkit"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.md" }

[tool.maturin]
features = ["python"]
